# inere

./: COPYING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autoclean.sh  autogen.sh  config.h.in  configure  configure.ac  inere-config.in
cfdi/: Makefile.am  autoclean.sh  configure.ac
cfdi/include/inere/cfdi/: base64.h  comprobante.h  config.h.in  crea_cfdi.h  crea_cfdi_qrcode_alloc.h  genera_cadena_original.h  lee_certificado.h  lee_cfdi.h  r12nimpresa.h  sello.h  verifica_sello_digital.h
cfdi/lib/: Makefile.am  base64.c  crea_cfdi.c  crea_cfdi_qrcode_alloc.c  genera_cadena_original.c  lee_certificado.c  lee_cfdi.c  r12nimpresa.c  sello.c  verifica_sello_digital.c
cfdi/python/: inerecfdi.c  setup.py.in
cfdi/src/: Makefile.am  ri.c  sello.c
cfdi/test/: Makefile.am  cadena.c  certificado.c  crea.c  emisor.xml  genera.c  lee.c  verifica_firma.c
envia/: Makefile.am  autoclean.sh  configure.ac
envia/include/inere/envia/: config.h.in  curl_envia_email.h  genera_cadena.h  non_ascii.h
envia/lib/: Makefile.am  base64.c  curl_envia_email.c  genera_cadena.c  non_ascii.c
envia/src/: Makefile.am  envia.c
examples/: Makefile  Makefile.in  extrae.c  moral.c  obten_digito.c  obten_homonimia.c  obten_rfc.c  verifica_rfc.c
include/inere/: cantidadcl_alloc.h  cantidades.h  config.h.in  extrae_fecha.h  homonimia.h  numeral_alloc.h  numerales.h  personafisica.h  personamoral.h  util.h  verificador.h
include/inere/cfdi/: certificado.h  crea_cfdi.h  genera_cadena_original.h  lee_certificado.h  lee_cfdi.h  sello.h  verifica_sello_digital.h
include/inere/envia/: curl_envia_email.h  genera_cadena.h  non_ascii.h
js/: README.md  fisica.html  jquery.clave_rfc.js  jquery.clave_rfc.min.js  jquery.digito_verificador.js  jquery.digito_verificador_fisica.js  jquery.digito_verificador_moral.js  jquery.rfc_digito_verificador.js  jquery.rfc_tester.js  jquery.rfc_tester.min.js  moral.html  rfc.html  selfcomplete.html  verifica.html
lib/: Makefile.am  Makefile.in  cantidadcl_alloc.c  cantidades.c  extrae_fecha.c  homonimia.c  numeral_alloc.c  numerales.c  personafisica.c  personamoral.c  util.c  verifica_sello_digital.c  verificador.c
lib/cfdi/: Makefile.am  certificado.c  crea_cfdi.c  genera_cadena_original.c  lee_certificado.c  lee_cfdi.c  sello.c  verifica_sello_digital.c
lib/envia/: Makefile.am  curl_envia_email.c  genera_cadena.c  non_ascii.c
lib/src/: Makefile.am  base64.c  cantidadcl_alloc.c  cantidades.c  extrae_fecha.c  homonimia.c  numeral_alloc.c  personafisica.c  personamoral.c  util.c  verificador.c
python/: README.md  inere.c  setup.py  setup.py.in
src/: Makefile.am  Makefile.in  cantidad.c  envia.c  rfc.c  sello.c
test/: Makefile.am  cadena.c  certificado.c  comprobante.c  emisor.xml  lee.c  sello.c
