#
SUBDIRS = lib src
EXTRA_DIST = autogen.sh README.md \
	examples/Makefile.in \
	examples/obten_digito.c \
	examples/obten_homonimia.c \
	examples/obten_rfc.c \
	examples/verifica_rfc.c \
	examples/moral.c \
	examples/extrae.c \
	python/inere.c \
	python/setup.py.in \
	js/README.md \
	js/jquery.rfc_tester.js \
	js/jquery.rfc_tester.min.js \
	js/rfc.html

CLEANFILES = *~ core* *.core
ACLOCAL_AMFLAGS = -I m4
